# templates-windows-service

./: Cargo.toml  README.md
setup/: installer.iss
src/: app.rs  main.rs
