[package]
name = "scheduler_service"
version = "0.1.0"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-service = {git = 'https://github.com/mullvad/windows-service-rs.git'}
winlog = "0.2.6"
anyhow = "1.0.31"
log = "0.4.8"
